<resources>
    <string name="facebook_app_id">1984275728486448</string>
    <string name="fb_login_protocol_scheme">fb1984275728486448</string>
    <string name="default_notification_channel_id" translatable="false">default</string>
    <string name="app_name">RunnersApp</string>
    <string name="version_number">Versión %1$s</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="action_settings">Settings</string>
    <string name="loginout">Cerrando sesión</string>
    <string name="current_plan">Plan Actual</string>
    <string name="notifications">Notificaciones</string>
    <string name="professional_notes">Notas de profesionales</string>
    <string name="personal_info">Mensajes al profe</string>
    <string name="chat">Mensajes al profe</string>
    <string name="cartelera">Cartelera</string>
    <string name="coach_comment">Comentarios del coach</string>
    <string name="user_history">Ficha Personal</string>
    <string name="racing">Carreras</string>
    <string name="fb_login">Conectar a facebook</string>
    <string name="fb_logout">Desconectar de facebook</string>
    <string name="payments">Pagos</string>
    <string name="statistics">Estadísticas</string>
    <string name="logout">Cerrar sesión</string>
    <string name="no_sd_card_msg">SD card no encontrada</string>
    <string name="error">Error</string>
    <string name="success">Éxito</string>
    <string name="http_exception_msg">Error, por favor intente nuevamente.</string>
    <string name="no_internet_title">Error de conexión.</string>
    <string name="no_internet_msg">Compruebe su conexión a internet e intentenlo nuevamente.</string>
    <string name="permision_error_no_camara">Habilite los permisos desde los settings de la aplicación para poder usar la camara.</string>
    <string name="permision_error_no_write_data">Habilite los permisos desde los settings de la aplicación.</string>
    <string name="option_yes">SI</string>
    <string name="option_save">Guardar</string>
    <string name="option_cancel">Cancelar</string>
    <string name="option_accept">Aceptar</string>
    <string name="option_confirm">Confirmar</string>
    <string name="option_continue">Continuar</string>
    <string name="option_send">Enviar</string>
    <string name="enter">Ingresar</string>
    <string name="email">Email</string>
    <string name="password">Contraseña</string>
    <string name="password_confirm">Repetir Contraseña</string>
    <string name="login_button">INGRESAR</string>
    <string name="forgot_password">Olvidé mi contraseña</string>
    <string name="copyright1">© 2017</string>
    <string name="copyright2">&#160;RunnersApp</string>
    <string name="forgot_button">RECUPERAR CONTRASEÑA</string>
    <string name="forgot_title">Recuperar contraseña</string>
    <string name="forgot_subtitle">Ingresá tu dirección de email y te mandamos un email con las instrucciones para recuperar tu contraseña</string>
    <string name="error_invalid_email">El campo email es inválido</string>
    <string name="error_invalid_password">Contraseña muy pequeña</string>
    <string name="error_confirm_password">Las contraseñas deben coincidir</string>
    <string name="error_field_required">Este campo es requerido</string>
    <string name="error_login">El inicio de sesión ha fallado, compruebe su mail y contraseña</string>
    <string name="error_first_login">El mail no es válido para un primer ingreso, verifique con el profe el mail con el cual fue registrado, gracias.</string>
    <string name="error_pass_recovery">Error al tratar de recuperar la password.</string>
    <string name="error_comunitychat">Error al intentar cargar la lista</string>
    <string name="success_pass_recovery">Revise su casilla de mail, pronto le enviaremos las instrucciones para recuperar su password.</string>
    <string name="first_login_button">Tu Primer Ingreso</string>
    <string name="first_login_enter">Mi Primer Ingreso</string>
    <string name="first_login_exp">Si es tu primer ingreso, ingresá el email con el que te registraron la cuenta de RunnersApp y elegí una contraseña.</string>
    <string name="training_plan_title">Plan de entrenamiento</string>
    <string name="training_plan_period">Período</string>
    <string name="training_plan_weeks">Semanas</string>
    <string name="training_plan_from">Desde</string>
    <string name="training_plan_to">Hasta</string>
    <string name="training_plan_number_weeks">Número de semanas</string>
    <string name="training_plan_stimuli_week">Estímulos semanales</string>
    <string name="training_plan_goals">Objetivos</string>
    <string name="training_plan_macro">Macrociclo</string>
    <string name="training_plan_meso">Mesociclo</string>
    <string name="training_plan_micro">Microciclo</string>
    <string name="training_plan_week">SEMANA</string>
    <string name="training_plan_week_short">SEM</string>
    <string name="training_plan_week2">Semana</string>
    <string name="training_plan_week_lowcase">Semana</string>
    <string name="training_plan_day">DIA</string>
    <string name="training_plan_no_content">Acá vas a encontrar el plan de entrenamiento.</string>
    <string name="training_plan_references">Referencias</string>
    <string name="training_plan_videos">Videos</string>
    <string name="training_plan_vol">Volumen km</string>
    <string name="training_plan_total_vol">VOLUMEN TOTAL:</string>
    <string name="training_plan_period_description">Período de entrenamiento.</string>
    <string name="training_plan_goals_description">Objetivos del entrenamiento.</string>
    <string name="comment_plan">Comentarios</string>
    <string name="add_comment_plan">Agregar Comentario</string>
    <string name="notifications_title">Notificaciones</string>
    <string name="notifications_no_content">Acá vas a encontrar las notificaciones que recibas.</string>
    <string name="payments_no_content">Acá vas a encontrar los pagos que hayas realizado.</string>
    <string name="notes_title">Notas de Profesionales</string>
    <string name="notes_no_content">Acá vas a encontrar las observaciones y recomendaciones que los profesionales hagan sobre vos.</string>
    <string name="personal_info_name">Runner</string>
    <string name="personal_info_title">Mensajes al profe</string>
    <string name="personal_info_no_content">Acá vas a poder ver y agregar tus notas personales.</string>
    <string name="personal_info_add_title">Agregar una nota</string>
    <string name="personal_info_add_error2">No se ha podido enviar el comentario.</string>
    <string name="personal_info_add_success">El comentario se ha enviado con éxito.</string>
    <string name="personal_info_action">Seleccione una acción…</string>
    <string name="personal_info_gallery">Seleccionar desde la galería</string>
    <string name="personal_info_camera">Tomar una foto con la cámara</string>
    <string name="statistics_wellcome">Bienvenido</string>
    <string name="statistics_month_tab">Mensual</string>
    <string name="statistics_year_tab">Anual</string>
    <string name="statistics_header_title">Bienvenido &amp;1 !</string>
    <string name="statistics_header_subtitle">Este es tu reporte de competencias:</string>
    <string name="statistics_no_content">Acá vas a poder visualizar estadísticas correspondientes a las carreras realizadas.</string>
    <string name="statistics_title_activity">Carreras</string>
    <string name="statistics_title_duration">Duración</string>
    <string name="statistics_title_distance">Distancia</string>
    <string name="statistics_title_speed">Velocidad</string>
    <string name="statistics_empty_data">Sin Datos</string>
    <string name="statistics_year">Año</string>
    <string name="statistics_activity_count">Cant.</string>
    <string name="statistics_duration_sec">seg</string>
    <string name="statistics_duration_min">min</string>
    <string name="statistics_duration_hour">hs</string>
    <string name="statistics_duration_days">d</string>
    <string name="statistics_distance">Km</string>
    <string name="statistics_distance_total">Total</string>
    <string name="statistics_speed">min/Km</string>
    <string name="racings_title">Carreras</string>
    <string name="racings_past">Carreras</string>
    <string name="racings_past_tab">Resultados</string>
    <string name="racing_text">Carrera</string>
    <string name="racing_km_text">Km</string>
    <string name="racing_duration_text">Duración</string>
    <string name="racing_duration_hour_text">Horas</string>
    <string name="racing_duration_minute_text">Minutos</string>
    <string name="racing_date_text">Fecha</string>
    <string name="racings_next">Próximas Carreras</string>
    <string name="racings_next_tab">Objetivos</string>
    <string name="racing_no_content">Acá vas a poder ver y agregar las carreras en las que participes.</string>
    <string name="racing_to_do_no_content">Acá vas a poder ver y agregar las carreras en las que quieras participar.</string>
    <string name="racing_del_no_content">Se han eliminado datos de la lista, es necesario actualizar la vista para ajustar los datos.</string>
    <string name="racing_add_title">Agregar datos de una carrera</string>
    <string name="racing_add_error2">No se ha podido enviar la carrera.</string>
    <string name="racing_add_success">La carrera se ha agregado con éxito.</string>
    <string name="racing_del_title">Eliminando datos seleccionados…</string>
    <string name="racing_del_error">No se ha podido eliminar la carrera.</string>
    <string name="racing_del_success">La carrera se ha eliminado con éxito.</string>
    <string name="racing_title_button">Eliminar Carrera</string>
    <string name="racing_message_button">Se procederá con la eliminación de la carrera, ¿Desea continuar?</string>
    <string name="racing_confirm_button">Eliminar</string>
    <string name="racing_cancel_button">Cancelar</string>
    <string name="racing_confirm_time">Seleccionar</string>
    <string name="racing_time_format">El formato horario debe ser del estilo "HH:mm:ss"</string>
    <string name="message_title_button">Eliminar Mensaje</string>
    <string name="message_info_button">Se procederá con la eliminación de la imagen, ¿Desea continuar?</string>
    <string name="message_del_error">No se ha podido eliminar la imagen.</string>
    <string name="message_del_success">La imagen se ha eliminado con éxito.</string>
    <string name="message_info_title">Mensajes de la cartelera</string>
    <string name="notification_comunityChat">Novedades en la cartelera</string>
    <string name="notification_plan">Novedades sobre tu plan</string>
    <string name="coach_name">Profe</string>
    <string name="coach_title">Comentarios del coach</string>
    <string name="coach_no_content">Acá vas a poder ver los comentarios del coach.</string>
    <string name="user_doc_title">Ficha Personal</string>
    <string name="user_doc_profile">Imagen de Perfil</string>
    <string name="user_doc_antecedente">Certificado médico</string>
    <string name="user_doc_dj">Declaración Jurada</string>
    <string name="user_doc_send">Subir foto</string>
    <string name="addcomment_add_title">Agregar un comentario</string>
    <string name="addcomment_add_error">Ingrese un comentario.</string>
    <string name="image_source_title">Seleccione una opción</string>
    <string name="ip_picker_image_source_title">Añadir imagen desde</string>
    <string name="ip_picker_image_source_gallery_option">Galería</string>
    <string name="ip_picker_image_source_camera_option">Cámara</string>
    <string name="ip_picker_add_error">No se ha podido enviar la imagen.</string>
    <string name="ip_picker_add_success">La imagen se ha enviado con éxito.</string>
    <string name="de">de</string>
    <string name="today">Hoy</string>
    <string name="yesterday">Ayer</string>
</resources>