<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:orientation="horizontal">

        <TextView
            android:id="@+id/copyright1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/copyright1"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/copyright2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="?colorDefaultPrimary"
            android:text="@string/copyright2"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"/>

        <TextView
            android:id="@+id/version"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/version_number"
            android:textSize="12sp"
            android:fontFamily="sans-serif-medium"
            android:textStyle="normal"
            android:layout_marginLeft="3dp"/>

</LinearLayout>
