<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:fresco="http://schemas.android.com/tools"
    android:background="@color/colorBackground">

    <ScrollView
        android:id="@+id/scroll"
        style="@style/ScrollAppearence">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorBackground">

            <RelativeLayout
                android:id="@+id/header"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/gradient">

                <TextView
                    style="@style/HeaderTitle"
                    android:layout_width="wrap_content"
                    android:layout_margin="@dimen/activity_vertical_margin"
                    android:text="@string/user_doc_title" />
            </RelativeLayout>


            <LinearLayout
                android:id="@+id/content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="@dimen/activity_horizontal_margin"
                android:orientation="vertical"
                android:layout_below="@+id/header"
                android:gravity="center">

                <TextView
                    android:id="@+id/profile_title"
                    style="@style/TrainingSectionTitle"
                    android:text="@string/user_doc_profile"
                    android:textAlignment="center"/>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/profile"
                    android:layout_marginTop="8dp"
                    android:layout_height="120dp"
                    android:layout_width="120dp"
                    fresco:placeholderImage="@drawable/ic_placeholder"/>

                <TextView
                    android:id="@+id/profile_button"
                    style="@style/Button"
                    android:gravity="center"
                    android:layout_width="120dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_doc_send"/>

                <TextView
                    android:id="@+id/antecedentes_title"
                    style="@style/TrainingSectionTitle"
                    android:text="@string/user_doc_antecedente"
                    android:textAlignment="center"/>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/antecedentes"
                    android:layout_marginTop="8dp"
                    android:layout_height="120dp"
                    android:layout_width="120dp"
                    fresco:placeholderImage="@drawable/ic_placeholder"/>

                <TextView
                    android:id="@+id/antecedentes_button"
                    style="@style/Button"
                    android:gravity="center"
                    android:layout_width="120dp"
                    android:layout_marginBottom="16dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_doc_send" />

                <TextView
                    android:id="@+id/dj_title"
                    style="@style/TrainingSectionTitle"
                    android:layout_marginTop="@dimen/activity_vertical_half_margin"
                    android:text="@string/user_doc_dj"
                    android:textAlignment="center"/>

                <com.facebook.drawee.view.SimpleDraweeView
                    android:id="@+id/dj"
                    android:layout_marginTop="8dp"
                    android:layout_height="120dp"
                    android:layout_width="120dp"
                    fresco:placeholderImage="@drawable/ic_placeholder"/>

                <TextView
                    android:id="@+id/dj_button"
                    style="@style/Button"
                    android:layout_width="120dp"
                    android:gravity="center"
                    android:layout_marginBottom="8dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/user_doc_send" />

            </LinearLayout>

            <!-- Login progress -->
            <ProgressBar
                android:id="@+id/login_progress"
                style="?android:attr/progressBarStyleLarge"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:visibility="gone" />


        </RelativeLayout>
    </ScrollView>

</RelativeLayout>
